[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "projective"
version = "0.0.1"
authors = [
  { name="Ryuto Yoshida"},
]
description = "Utilities for projective geometry: epipolar constraints and 2D perspective transforms (affine / homography)."
readme = "src/projective/README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "opencv-contrib-python",
]

[project.urls]
"Homepage" = "https://github.com/ry-yoshida-private/Projective"
"Bug Tracker" = "https://github.com/ry-yoshida-private/Projective/issues"

[tool.setuptools.packages.find]
where = ["src"]
